updatin contact view

--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="styles/contact.css" type="text/css">
 
 <div class="put-me-down">
-<div class="contacts">Here are the following ways you can contact me</div>
+<div class="contacts">Here are the following ways you can contact me (Work in progress)</div>
   <div class="row" class="padding">
     <div class="col-md-4">
         <img class=" thumbnail-override" alt="Bootstrap template"
